test/Witgen/object_input_partial_arg_name_fallback.llzk
// RUN: split-file %s %t
// RUN: not llzk-witgen %t/test.llzk --inputs %t/input.json 2>&1 | FileCheck %s
// RUN: not llzk-witgen %t/test.llzk --inputs %t/input.json --backend=execution-engine 2>&1 | FileCheck %s

//--- test.llzk

module attributes {llzk.lang, llzk.main = !struct.type<@Main>} {
  struct.def @Main {
    struct.member @sum : !felt.type<"babybear"> {llzk.pub}
    function.def @compute(
      %lhs: !felt.type<"babybear"> {function.arg_name = "lhs"},
      %rhs: !felt.type<"babybear">
    ) -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      %sum = felt.add %lhs, %rhs : !felt.type<"babybear">, !felt.type<"babybear">
      struct.writem %self[@sum] = %sum : !struct.type<@Main>, !felt.type<"babybear">
      function.return %self : !struct.type<@Main>
    }
    function.def @constrain(%self: !struct.type<@Main>, %lhs: !felt.type<"babybear">, %rhs: !felt.type<"babybear">) {
      function.return
    }
  }
}

// CHECK: llzk-witgen error: JSON object inputs require function.arg_name attributes on every Main.compute argument; found only 1 of 2.
// CHECK-SAME: Encountered object key order
// CHECK-SAME: Use a positional JSON array instead.

//--- input.json
{"foo": 4, "lhs": 5}
